Programación de selección de términos según primera letra y ajustes gráficos

--- a/src/data/config.json
+++ b/src/data/config.json
@@ -3,9 +3,9 @@
     "nombre" : "Traductor Gnäbere",
     "servidor" : "http://recursos/2020/oscar",
     "img" : {
-        "general" : "http://recursos.mep.go.cr/2020/oscar/imagenes/"
+        "general" : "http://localhost/webservices/traductor/"
     },
     "mp3" : {
-        "general" : "http://recursos.mep.go.cr/2020/oscar/audios/"
+        "general" : "http://localhost/webservices/traductor/"
     }
 }
