--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,11 +1,11 @@
 {
     "version" : "1",
     "nombre" : "Traductor Gnäbere",
-    "servidor" : "http://recursos/2020/oscar",
+    "servidor" : "https://recursos.mep.go.cr/2020/oscar/",
     "img" : {
-        "general" : "http://localhost/webservices/traductor/"
+        "general" : "https://recursos.mep.go.cr/2020/oscar/webservices/traductor/"
     },
     "mp3" : {
-        "general" : "http://localhost/webservices/traductor/"
+        "general" : "https://recursos.mep.go.cr/2020/oscar/webservices/traductor/"
     }
 }
