--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-multi-carousel": "^2.5.5",
     "react-scripts": "3.4.0"
   },
   "scripts": {
